# mtg-list-converter

./: README.md  card-list-2022-11-13 17:55:27.194757.csv  main.py  pyproject.toml
mtg-collection/: Adventures Of The Forgotten Realms.txt  Aether Revolt .txt  Amonketh.txt  Avacyn Restored.txt  Avacyn_ Dark Ascension .txt  Coldsnap.txt  Commander 2013.txt  Commander 2014.txt  Commander 2015.txt  Commander 2017.txt  Commander 2018.txt  Commander 2019.txt  Commander 2020.txt  Commander 2021.txt  Commander Anthology Volume II.txt  Commander Legends .txt  Commander Legends_ Battle For Baldur_s Gate.txt  Commander_ Crimson Vow.txt  Commander_ Forgotten Realms Commander .txt  Commander_ Kaldheim Commander .txt  Commander_ Midnight Hunt.txt  Commander_ Neon Dynasty Commander .txt  Commander_ New Capenna Commander .txt  Commander_ Zendikar Rising Commander .txt  Core Set 2010.txt  Core Set 2011.txt  Core Set 2012.txt  Core Set 2013.txt  Core Set 2014.txt  Core Set 2015.txt  Core Set 2019.txt  Core Set 2020.txt  Dominaria.txt  Dragon_s Maze.txt  Duel Decks_ Blessed Vs Cursed .txt  Duel Decks_ Elspeth Vs Tezzeret .txt  Duel Decks_ Elves Vs Inventors .txt  Duel Decks_ Garruk Vs Liliana .txt  Duel Decks_ Phyrexians Vs The Coalition .txt  Duel Decks_ Venser Vs Koth.txt  (+52 more)
