[tool.poetry]
name = "mtg-list-converter"
version = "0.1.0"
description = "Script for coverting .txt MTG card list to widely used .csv format"
authors = ["Jan Jędrzejewski <janjedrzejewski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
